# udp-linux-server

./: CMakeLists.txt  README.md  cmake-variants.json
src/: CMakeLists.txt  client.c  client.h  main.c  server.c  server.h
tests/: CMakeLists.txt  test_server.c
